<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esta"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disponible"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/rojo"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/verde"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/verde"
            android:layout_margin="5dp"/>

    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/rojo"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/rojo"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:src="@drawable/verde"
            android:layout_margin="5dp"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona_a"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>